# advent_of_code_2025

./: Cargo.toml
aoc/: Cargo.toml
aoc/src/: main.rs
d01/src/: lib.rs
d02/: Cargo.toml
d02/src/: lib.rs
d03/src/: lib.rs
d04/src/: lib.rs
d05/src/: lib.rs
d06/src/: lib.rs
d07/src/: lib.rs
